# learnNote

./: LeetCode.md  Untitled.md  gitee私人令牌  interview.md  培训.md  经济学原理.md
arm/: arm.md  hello  hello.c
computerScience/: 计算机网络.md  软件工程.md
computerScience/net/: net.md
dl/classicalNet/: sourcecode.md
dl/objectDetection/: tfmodel.md
dl/objectDetection/annotation/: label.md
dl/objectDetection/darknet/: Makefile  darknet
dl/objectDetection/raccoon/: cmd  generate_tfrecord.py  spliteLabels.py
interview/: skill.md  机器学习.md  编程基础.md
language/Java/LearnJava/: person.txt
language/Java/LearnSpringBoot/: pom.xml
language/Java/SpringBootQuick/: pom.xml
language/Java/algorithm/: algorithm.md
language/assembly/: assembly.md  example.c  example.s  nasm.md  test.asm
language/assembly/ucore/: operation system.md
language/cpp/c/: c.md
language/cpp/interview-master/: README.md
language/cpp/mutilThread/: main.cpp  (+1 more)
language/javascript/: javascript.md
language/py/: python_advance.md
ml/: ML.md
ml/LIHang/: DecisonTree.py  KNN.py  LogisticRegression.py  NaiveBayes.py  Perceptron.py
project/QLearning/: main.py
project/dockerEnv/: Dockerfile  app.py  docker-compose.yml
project/face_recognition/: face_recognition.md
project/fingervein/: CMakeLists.txt  README.md  main.cpp  readme
project/fingervein/GMS/: GMS.cpp  GMS.h
project/fingervein/curvature/: CurvatureCalculator.cpp  CurvatureCalculator.h  MaxCurvatures.cpp  MaxCurvatures.h
project/fingervein/faiss/: FaissTest.py  faiss.md  main.py
project/fingervein/pre_treatment/: FFT.cpp  FFT.h  fft.cpp  fft.h
project/fingervein/sift_lbp/: DetectFeature.cpp  DetectFeature.h
project/fingervein/test/: GmsTest.cpp  GmsTest.h  SimpleTest.cpp  SimpleTest.h  StringTest.cpp  StringTest.h  testAllImage.cpp  testAllImage.h  testInterface.h  testMaxCurvature.cpp  testMaxCurvature.h
project/fingervein/util/: Common.h  IO.cpp  IO.h
project/leetcode/: README.md
project/readBin/: main.py
project/segmentation/: segmentation.md
project/wechat/: wechat.md
project/wechat_flask_api/: run_keras_server.py
project/yolo3/: train.py
tool/: tool.md  yousan.md
tool/book/: book.md
tool/cmake/: cmake.md
tool/conda/: conda.md
tool/cpplint/: cpplint.md
tool/cuda/: cuda.md
tool/docker/: dcoker.md  docker.md
tool/git/: git.md  github.md
tool/jetbrain/: IDE.md
tool/k8s/: k8s.md
tool/latex/: Latex.md
tool/linux/: Linux.md  package-lock.json  shell.md
tool/make_cmake/cmake/cmake/chapter1/: CMakeLists.txt  Message.cpp  Message.h  main.cpp
tool/nginx/: nginx.md
tool/openSourceLicense/: open_source_license.md
(+412 files in other folders)
