cmake_minimum_required(VERSION 3.5)
project(chapter1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
option(USE_LIBRARY "compile sources into a library" OFF)
message(STATUS "compile sources into a library?" ${USE_LIBRARY})
set(BUILD_SHARED_LIBS OFF)
list(APPEND _sources Message.h Message.cpp)

if(USE_LIBRARY)
    add_library(message ${_sources})
    add_executable(chapter1 main.cpp)
    target_link_libraries(chapter1 message)
else()
    add_executable(chapter1 main.cpp ${_sources})
endif()

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    message(STATUS "Configuring on/for Linux")
elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    message(STATUS "Configuring on/for macOS")
elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    message(STATUS "Configuring on/for Windows")
elseif(CMAKE_SYSTEM_NAME STREQUAL "AIX")
    message(STATUS "Configuring on/for IBM AIX")
else()
    message(STATUS "Configuring on/for ${CMAKE_SYSTEM_NAME}")
endif()